packages/svelte/tests/compiler-errors/samples/runes-wrong-state-raw-args/main.svelte
<script>
	const foo = $state.raw(1, 2, 3);
</script>
